--- a/templates/general/navbar.html
+++ b/templates/general/navbar.html
@@ -29,7 +29,7 @@
           <a type="button" class="btn btn-success" href="{% url 'product_page' %}" data-bind-href="pricing">Checkout page</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'logout' %}">Log out</a>
+          <a class="nav-link" href="">Log out</a>
         </li>
       </ul>
       {% else %}
